--- a/templates/temp.html
+++ b/templates/temp.html
@@ -5,10 +5,11 @@
 
 
 <br>
+<h1 class="title is-3">AD Enumeration</h1>
 <div class = "dropdown">
     <div class = "dropdown-trigger">
        <button class = "button" aria-haspopup = "true" aria-controls = "dropdown-menu">
-          <span>Choose a command to execute</span>
+          <span>Choose an Enumeration technique</span>
           <span class = "icon is-small">
              <i class = "fa fa-angle-down" aria-hidden="true"></i>
           </span>
