--- a/templates/execute.html
+++ b/templates/execute.html
@@ -17,7 +17,7 @@
 
         <br>
         <h1 class="title is-3">AD Enumeration</h1>
-<div class = "dropdown">
+<div class = "dropdown is-hoverable">
     <div class = "dropdown-trigger">
        <button class = "button is-danger is-outlined">
           <span>Choose AD Enumeration method</span>
@@ -26,34 +26,40 @@
           </span>
        </button>
     </div>
-    
-    
     <div class = "dropdown-menu" id = "dropdown-menu" role = "menu">
-      
        <div class = "dropdown-content">
           <a href = "http://127.0.0.1:5000/{{name}}/execute?d=Get-SharpHoundZip" class = "dropdown-item">Get-SharpHoundZip</a>
           <a href = "http://127.0.0.1:5000/{{name}}/execute?d=Get-ASREPRoastable"  class = "dropdown-item">Get-ASREPRoastable</a>
           <a href = "http://127.0.0.1:5000/{{name}}/execute?d=Get-Kerberoastable" class = "dropdown-item ">Get-Kerberoastable</a>
-          <a href = "http://127.0.0.1:5000/{{name}}/execute?d=Srilanka" class = "dropdown-item">Srilanka</a>
+          <a href = "http://127.0.0.1:5000/{{name}}/execute?d=Get-GroupRecursive" class = "dropdown-item">Get-GroupRecursive</a>
           <hr class = "dropdown-divider">
           <a href = "#" class = "dropdown-item">South Africa</a>
        </div>
     </div>
  </div>
- <script>
-    //DOMContentLoaded - it fires when initial HTML document has been completely loaded
-    document.addEventListener('DOMContentLoaded', function () {
-       // querySelector - it returns the element within the document that matches the specified selector
-       var dropdown = document.querySelector('.dropdown');
-       //addEventListener - attaches an event handler to the specified element.
-       dropdown.addEventListener('click', function(event) {
-          //event.stopPropagation() - it stops the bubbling of an event to parent elements, by preventing parent event handlers from being executed
-          event.stopPropagation();
-          //classList.toggle - it toggles between adding and removing a class name from an element
-          dropdown.classList.toggle('is-active');
-       });
-    });        
- </script>
+
+ <br><br>
+
+ <h3 class="title is-3">Privesc Enumeration</h3>
+ <div class="dropdown is-hoverable">
+  
+   <div class="dropdown-trigger">
+       <button class="button is-danger is-outlined" aria-haspopup="true" aria-controls="dropdown-menu4">
+           <span>Hover to choose a method</span>
+           <span class="icon is-small">
+               <i class="fas fa-angle-down" aria-hidden="true"></i>
+           </span>
+       </button>
+   </div>
+   <div class="dropdown-menu" id="dropdown-menu" role="menu">
+      <div class = "dropdown-content">
+         <a href = "http://127.0.0.1:5000/{{name}}/execute?d=powerup" class = "dropdown-item">Run PowerUp</a>
+         
+      </div>
+   </div>
+</div>
+
+
 </div><br><br>
 
 <style>
