Added copy to clipboard button

--- a/templates/agents.html
+++ b/templates/agents.html
@@ -14,7 +14,7 @@
         <h2 class="title has-text-primary is-4" > {{ ips[threads.index(i)]}} </h2>
         
         <a href="http://127.0.0.1:5000/{{i.name}}/executecmd" class="button is-danger  is-outlined">Execute Commands</a>
-       
+       &nbsp;
         <a href="http://127.0.0.1:5000/{{i.name}}/file-manager" class="button is-danger is-outlined">Browse Files</a>
        <br><br>
         {% endfor %}
