--- a/templates/execute.html
+++ b/templates/execute.html
@@ -58,7 +58,7 @@
       <div class = "dropdown-content">
          <a href = "http://127.0.0.1:5000/{{name}}/execute?d=powerup" class = "dropdown-item">Run PowerUp</a>
          <a href = "http://127.0.0.1:5000/{{name}}/execute?d=unquotedservices" class = "dropdown-item">Unquoted Services</a>
-
+         <a href = "http://127.0.0.1:5000/{{name}}/execute?d=Get-InstalledSoftware" class = "dropdown-item">Get-Installed Software</a>
       </div>
    </div>
 </div>
