--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,8 @@
   <head>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+
     <meta charset="UTF-8">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,7 +16,7 @@
 
      
         
-        <nav class="navbar is-black has-shadow is-size-2 ">
+        <nav class="navbar is-dark  has-shadow is-size-2 ">
             <div class="navbar-menu ">
 
                 <div class="navbar-start" id="nav-links">
