Added Unconstrained del

--- a/templates/agents.html
+++ b/templates/agents.html
@@ -19,7 +19,7 @@
         &nbsp;
         <a href="http://127.0.0.1:5000/{{i.name}}/registrymanager" class="button is-white is-outlined">Browse Registry</a>
         &nbsp;
-        <a href="http://127.0.0.1:5000/{{i.name}}/loadassembly" class="button is-white is-outlined">Reflective Loader</a>
+        <a href="http://127.0.0.1:5000/{{i.name}}/loadassembly" class="button is-white is-outlined">Loader</a>
        <br><br> <br>
         {% endfor %}
                
