--- a/templates/execute.html
+++ b/templates/execute.html
@@ -35,6 +35,7 @@
           <a href = "http://127.0.0.1:5000/{{name}}/execute?d=Get-Kerberoastable" class = "dropdown-item ">Get-Kerberoastable</a>
           <a href = "http://127.0.0.1:5000/{{name}}/execute?d=Get-GroupRecursive" class = "dropdown-item">Get-GroupRecursive</a>
           <a href="http://127.0.0.1:5000/{{name}}/execute?d=Get-DCSyncUsers" class="dropdown-item">Get-DCSyncUsers</a>
+          <a href="http://127.0.0.1:5000/{{name}}/execute?d=Get-UnconstrainedDelegation" class="dropdown-item">Get-UnconstrainedDelegation</a>
           
           
        </div>
@@ -56,9 +57,12 @@
    </div>
    <div class="dropdown-menu" id="dropdown-menu" role="menu">
       <div class = "dropdown-content">
-         <a href = "http://127.0.0.1:5000/{{name}}/execute?d=powerup" class = "dropdown-item">Run PowerUp</a>
+         <a href = "http://127.0.0.1:5000/{{name}}/execute?d=RUNPSSCRIPT-powerup.ps1" class = "dropdown-item">Run PowerUp</a>
          <a href = "http://127.0.0.1:5000/{{name}}/execute?d=unquotedservices" class = "dropdown-item">Unquoted Services</a>
          <a href = "http://127.0.0.1:5000/{{name}}/execute?d=Get-InstalledSoftware" class = "dropdown-item">Get-Installed Software</a>
+         <a href = "http://127.0.0.1:5000/{{name}}/execute?d=Check-ProcessElevation" class = "dropdown-item">Check-ProcessElevation</a>
+         <a href = "http://127.0.0.1:5000/{{name}}/execute?d=RUNPSSCRIPT-enableprivileges.ps1" class = "dropdown-item">Enable-Privileges</a>
+         <a href = "http://127.0.0.1:5000/{{name}}/execute?d=ISDEBUGGERPRESENT" class = "dropdown-item">IsDebuggerPresent</a>
       </div>
    </div>
 </div>
