--- a/templates/filemanager.html
+++ b/templates/filemanager.html
@@ -1,10 +1,17 @@
 {% extends "index.html" %}
 
 {% block content %}
-<div class="block"><br>
+
+<style>
+    #testing{
+        color:white;    
+    }
+</style>
+
+<div class="block has-background-dark"><br>
 {% for i in cwd.split('\\') %}
 
-<a href="http://127.0.0.1:5000/{{agentname}}/file-manager?indexing={{cwd.split('\\').index(i)}}"class="button is-outlined is-small is-primary">{{i}}</a>>
+<a href="http://127.0.0.1:5000/{{agentname}}/file-manager?indexing={{cwd.split('\\').index(i)}}"class="button is-white is-outlined">{{i}}</a>>
 
 {% endfor %}
 <br>
