--- a/templates/loadassembly.html
+++ b/templates/loadassembly.html
@@ -42,6 +42,37 @@
 </form>
 </div>
 
+
+
+<div class="block has-background-dark"><br>
+  <p class="title is-4 has-text-white">Select shellcode file from output folder</p>
+  
+  
+  <form action="http://127.0.0.1:5000/{{agentname}}/injectshellcode" method="POST">
+  
+      <div class="file is-white ">
+          <label class="file-label">
+            <input class="file-input" type="file" name="myfiles">
+            <span class="file-cta">
+              <span class="file-icon">
+                <i class="fas fa-upload"></i>
+              </span>
+              <span class="file-label">
+                Choose a file…
+              </span>
+            </span>
+          </label>
+        </div>
+      
+        <br> 
+        &nbsp;&nbsp;&nbsp;
+        <button class="button is-white is-outlined" type="submit">Load Shellcode from file</button>
+  </form>
+  <br>
+  </div>  
+
+
+
 {% endblock content %}
 
 
