Added screenshot functionality

--- a/templates/agents.html
+++ b/templates/agents.html
@@ -20,7 +20,10 @@
         <a href="http://127.0.0.1:5000/{{i.name}}/registrymanager" class="button is-white is-outlined">Browse Registry</a>
         &nbsp;
         <a href="http://127.0.0.1:5000/{{i.name}}/loadassembly" class="button is-white is-outlined">Loader</a>
-       <br><br> <br>
+       
+       &nbsp;
+       <a href="http://127.0.0.1:5000/{{i.name}}/misc" class="button is-white is-outlined">Misc</a>
+        <br><br> <br>
         {% endfor %}
                
 </div>
