--- a/templates/misc.html
+++ b/templates/misc.html
@@ -7,7 +7,9 @@
     <br>
 
 <a href="http://127.0.0.1:5000/{{agentname}}/misc?cmd=Get-Screenshot" class="button is-white is-outlined">Get-Screenshot</a> &nbsp;
-<a href="http://127.0.0.1:5000/{{agentname}}/misc?cmd=Get-LogonSessions" class="button is-white is-outlined">Get-LogonSessions</a>
+<a href="http://127.0.0.1:5000/{{agentname}}/misc?cmd=Get-LogonSessions" class="button is-white is-outlined">Get-LogonSessions</a>&nbsp;
+<a href="http://127.0.0.1:5000/{{agentname}}/misc?cmd=Get-GroupsPrivileges" class="button is-white is-outlined">Groups Privileges</a> &nbsp;
+<a href="http://127.0.0.1:5000/{{agentname}}/misc?cmd=Get-NetShares" class="button is-white is-outlined">Net Shares</a>
 
 <br><br>
 
