--- a/templates/misc.html
+++ b/templates/misc.html
@@ -6,10 +6,10 @@
 
     <br>
 
-<a href="http://127.0.0.1:5000/{{agentname}}/misc?cmd=Get-Screenshot" class="button is-white is-outlined">Get-Screenshot</a> &nbsp;
-<a href="http://127.0.0.1:5000/{{agentname}}/misc?cmd=Get-LogonSessions" class="button is-white is-outlined">Get-LogonSessions</a>&nbsp;
-<a href="http://127.0.0.1:5000/{{agentname}}/misc?cmd=Get-GroupsPrivileges" class="button is-white is-outlined">Groups Privileges</a> &nbsp;
-<a href="http://127.0.0.1:5000/{{agentname}}/misc?cmd=Get-NetShares" class="button is-white is-outlined">Net Shares</a>
+<a href="http://127.0.0.1:5000/{{agentname}}/misc?cmd=Get-Screenshot" class="title is-5 button is-white is-outlined">Get-Screenshot</a> &nbsp;
+<a href="http://127.0.0.1:5000/{{agentname}}/misc?cmd=Get-LogonSessions" class="title is-5 button is-white is-outlined">Get-LogonSessions</a>&nbsp;
+<a href="http://127.0.0.1:5000/{{agentname}}/misc?cmd=Get-GroupsPrivileges" class="title is-5 button is-white is-outlined">Groups Privileges</a> &nbsp;
+<a href="http://127.0.0.1:5000/{{agentname}}/misc?cmd=Get-NetShares" class="title is-5 button is-white is-outlined">Net Shares</a>
 
 <br><br>
 
