--- a/templates/loadassembly.html
+++ b/templates/loadassembly.html
@@ -45,10 +45,10 @@
 
 
 <div class="block has-background-dark"><br>
-  <p class="title is-4 has-text-white">Select shellcode file from output folder</p>
+  <p class="title is-4 has-text-white">Select 64Bit exe file from output folder</p>
   
   
-  <form action="http://127.0.0.1:5000/{{agentname}}/injectshellcode" method="POST">
+  <form action="http://127.0.0.1:5000/{{agentname}}/LoadPE64" method="POST">
   
       <div class="file is-white ">
           <label class="file-label">
@@ -66,7 +66,7 @@
       
         <br> 
         &nbsp;&nbsp;&nbsp;
-        <button class="button is-white is-outlined" type="submit">Load Shellcode from file</button>
+        <button class="button is-white is-outlined" type="submit">Load</button>
   </form>
   <br>
   </div>  
