Added Process gui injector

--- a/templates/agents.html
+++ b/templates/agents.html
@@ -23,7 +23,14 @@
        
        &nbsp;
        <a href="http://127.0.0.1:5000/{{i.name}}/misc" class="button is-white is-outlined">Misc</a>
-        <br><br> <br>
+       &nbsp;
+                
+       <a href="http://127.0.0.1:5000/{{i.name}}/processes" class="button is-white is-outlined">Processes</a>
+       
+       &nbsp;
+       
+       <br><br> <br>
+        
         {% endfor %}
                
 </div>
