--- a/templates/register.html
+++ b/templates/register.html
@@ -6,12 +6,13 @@
     
     <h1 class="title is-1  has-text-white ">Register</h1> <br>
 
-    {% if status %}
+    <!--{% if status %}
     {% for i in status %}
     <p class="title is-2 has-text-white">{{ i[0] }}</p>
     {% endfor %}
-    {% endif %}
-
+    {% endif %}-->
+    <p class="title is-2 has-text-white">{{ status }}</p>
+    
 <form action="#" method="POST">
     {{regform.csrf_token}}
     <p class="title is-4 has-text-white">Choose Username</p>
