--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,7 @@
                {% else %}
                <div class="navbar-start" id="nav-links">
                 <a href="{{ url_for('home') }}" class="navbar-item">Home</a>
+                <a href="{{ url_for('cheatsheet') }}" class="navbar-item">Cheatsheet</a>
                 <!--<a href="{{ url_for('agents') }}" class="navbar-item">Agents</a>
                 -->
             </div> 
