Added login and get-laps

--- a/templates/execute.html
+++ b/templates/execute.html
@@ -38,7 +38,7 @@
           <a href = "http://127.0.0.1:5000/{{name}}/execute?d=Get-GroupRecursive" class = "dropdown-item">Get-GroupRecursive</a>
           <a href="http://127.0.0.1:5000/{{name}}/execute?d=Get-DCSyncUsers" class="dropdown-item">Get-DCSyncUsers</a>
           <a href="http://127.0.0.1:5000/{{name}}/execute?d=Get-UnconstrainedDelegation" class="dropdown-item">Get-UnconstrainedDelegation</a>
-          
+          <a href="http://127.0.0.1:5000/{{name}}/execute?d=Get-Laps" class="dropdown-item">Get-LAPS</a>
           
        </div>
     </div>
